--- a/.github/workflows/build-openwrt-CM520-KKT.yml
+++ b/.github/workflows/build-openwrt-CM520-KKT.yml
@@ -158,11 +158,11 @@ jobs:
         cp $OPENWRT_PATH/.config build.config
         rm -rf sha256sums
         rm -rf profiles.json
-        #rm -rf openwrt-mediatek-filogic-cmcc_rax3000m-nand-initramfs-kernel.bin
-        #rm -rf openwrt-mediatek-filogic-cmcc_rax3000m-nand.manifest
-        #mv config.buildinfo rax3000m.buildinfo
-        #mv openwrt-mediatek-filogic-cmcc_rax3000m-nand-squashfs-sysupgrade.bin ${{ env.FIRMWARE_TAG }}-squashfs-sysupgrade.bin
-        #mv openwrt-mediatek-filogic-cmcc_rax3000m-nand-squashfs-factory.bin ${{ env.FIRMWARE_TAG }}-squashfs-factory.bin
+        rm -rf openwrt-ipq40xx-generic-mobipromo_cm520-79f-initramfs-fit-zImage.itb
+        rm -rf openwrt-ipq40xx-generic-mobipromo_cm520-79f.manifest
+        mv config.buildinfo CM520.buildinfo
+        mv openwrt-ipq40xx-generic-mobipromo_cm520-79f-squashfs-nand-sysupgrade.bin ${{ env.FIRMWARE_TAG }}-squashfs-sysupgrade.bin
+        mv openwrt-ipq40xx-generic-mobipromo_cm520-79f-squashfs-nand-factory.ubi ${{ env.FIRMWARE_TAG }}-squashfs-factory.ubi
         #mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         #tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
