--- a/.github/workflows/build-openwrt-GDOCK-KKT.yml
+++ b/.github/workflows/build-openwrt-GDOCK-KKT.yml
@@ -159,11 +159,11 @@ jobs:
         cp $OPENWRT_PATH/.config build.config
         rm -rf sha256sums
         rm -rf profiles.json
-        #rm -rf openwrt-mediatek-filogic-cmcc_rax3000m-nand-initramfs-kernel.bin
-        #rm -rf openwrt-mediatek-filogic-cmcc_rax3000m-nand.manifest
-        #mv config.buildinfo rax3000m.buildinfo
-        #mv openwrt-mediatek-filogic-cmcc_rax3000m-nand-squashfs-sysupgrade.bin ${{ env.FIRMWARE_TAG }}-squashfs-sysupgrade.bin
-        #mv openwrt-mediatek-filogic-cmcc_rax3000m-nand-squashfs-factory.bin ${{ env.FIRMWARE_TAG }}-squashfs-factory.bin
+        rm -rf openwrt-ipq40xx-generic-p2w_r619ac-128m-initramfs-fit-zImage.itb
+        rm -rf openwrt-ipq40xx-generic-p2w_r619ac-128m.manifest
+        mv config.buildinfo GDOCK.buildinfo
+        mv openwrt-ipq40xx-generic-p2w_r619ac-128m-squashfs-nand-sysupgrade.bin ${{ env.FIRMWARE_TAG }}-squashfs-sysupgrade.bin
+        mv openwrt-ipq40xx-generic-p2w_r619ac-128m-squashfs-nand-factory.ubi ${{ env.FIRMWARE_TAG }}-squashfs-factory.ubi
         #mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         #tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
