--- a/.github/workflows/build-openwrt-GDOCK-KKT.yml
+++ b/.github/workflows/build-openwrt-GDOCK-KKT.yml
@@ -188,10 +188,10 @@ jobs:
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
           ### 📒 固件信息(WIFI版本)
-          - 这是带WIFI-YM-RAX3000M固件
-          - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 RAX3000M-LEDE-YM 固件
+          - 这是带WIFI-GDOCK固件
+          - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 WIFI-GDOCK 固件
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🌐 默认地址: 192.168.2.1
-          - 🔑 默认密码: password
+          - 🌐 默认地址: 192.168.3.1
+          - 🔑 默认密码: 
           
