--- a/.github/workflows/build-openwrt-CM520-KKT.yml
+++ b/.github/workflows/build-openwrt-CM520-KKT.yml
@@ -24,9 +24,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/CM520.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: CM520-KKT.sh
+  CONFIG_FILE: Config/CM520.config
+  DIY_P1_SH: Scripts/CM520/diy-part1.sh
+  DIY_P2_SH: Scripts/CM520/CM520-KKT.sh
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
