--- a/.github/workflows/build-openwrt-GDOCK-KKT.yml
+++ b/.github/workflows/build-openwrt-GDOCK-KKT.yml
@@ -24,9 +24,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/BYGDOCK.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: GDOCK-KYT.sh
+  CONFIG_FILE: Config/BYGDOCK.config
+  DIY_P1_SH: Scripts/GDOCK/diy-part1.sh
+  DIY_P2_SH: Scripts/GDOCK/GDOCK-KYT.sh
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
