--- a/Config/BYGDOCK.config
+++ b/Config/BYGDOCK.config
@@ -70,6 +70,7 @@ CONFIG_PACKAGE_ath10k-firmware-qca4019=n
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
+# CONFIG_PACKAGE_kmod-batman-adv=n
 CONFIG_PACKAGE_ATH_DFS=y
 CONFIG_PACKAGE_kmod-ath10k-ct=y
 CONFIG_PACKAGE_kmod-ath10k=n
