--- a/Config/CM520.config
+++ b/Config/CM520.config
@@ -64,6 +64,7 @@ CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
 CONFIG_PACKAGE_ATH_DFS=y
+# CONFIG_PACKAGE_kmod-batman-adv=n
 CONFIG_PACKAGE_kmod-ath10k-ct=y
 CONFIG_PACKAGE_kmod-ath10k=n
 #CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=n
