--- a/Config/CM520.config
+++ b/Config/CM520.config
@@ -93,6 +93,7 @@ CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-store=y
+# CONFIG_PACKAGE_luci-app-lucky=n
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
@@ -137,6 +138,8 @@ CONFIG_PACKAGE_p910nd=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_vlmcsd=y
+CONFIG_PACKAGE_lucky=y
+CONFIG_PACKAGE_lua-maxminddb=y
 CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_kmod-oaf=y
