--- a/Config/CM520.config
+++ b/Config/CM520.config
@@ -82,7 +82,7 @@ CONFIG_PACKAGE_MAC80211_MESH=y
 
 
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-timecontrol=y
+# CONFIG_PACKAGE_luci-app-timecontrol=n
 CONFIG_PACKAGE_luci-app-control-weburl=y
 CONFIG_PACKAGE_luci-app-control-timewol=y
 CONFIG_PACKAGE_luci-app-control-webrestriction=y
@@ -95,8 +95,8 @@ CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-store=y
-# CONFIG_PACKAGE_luci-app-lucky=n
-CONFIG_PACKAGE_luci-app-guest-wifi=y
+CONFIG_PACKAGE_luci-app-lucky=y
+# CONFIG_PACKAGE_luci-app-guest-wifi=n
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 # CONFIG_PACKAGE_luci-app-upnp=n
@@ -110,8 +110,8 @@ CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
 # CONFIG_PACKAGE_luci-app-vsftpd=n
-# CONFIG_PACKAGE_luci-app-wol=n
-CONFIG_PACKAGE_luci-app-wolplus=y
+CONFIG_PACKAGE_luci-app-wol=y
+# CONFIG_PACKAGE_luci-app-wolplus=n
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-serverchan=n
 # CONFIG_PACKAGE_luci-app-ssr-plus=n
@@ -119,7 +119,6 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
 # CONFIG_PACKAGE_luci-app-xlnetacc=n
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
@@ -151,6 +150,7 @@ CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_lucky=y
 CONFIG_PACKAGE_unzip=y
 # CONFIG_PACKAGE_xray-core=n
 # CONFIG_PACKAGE_xray-plugin=n
