--- a/Config/BYGDOCK.config
+++ b/Config/BYGDOCK.config
@@ -101,7 +101,7 @@ CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-store=y
-# CONFIG_PACKAGE_luci-app-lucky=n
+CONFIG_PACKAGE_luci-app-lucky=y
 # CONFIG_PACKAGE_luci-app-guest-wifi=n
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
@@ -110,12 +110,12 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
-# CONFIG_PACKAGE_luci-app-vsftpd=n
+# CONFIG_PACKAGE_luci-app-vssr=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=n
+# ONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=n
+CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-wolplus=n
 CONFIG_PACKAGE_luci-app-smartdns=y
@@ -156,6 +156,7 @@ CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_lucky=y
 CONFIG_PACKAGE_unzip=y
 # CONFIG_PACKAGE_xray-core=n
 # CONFIG_PACKAGE_xray-plugin=n
