--- a/Config/CM520.config
+++ b/Config/CM520.config
@@ -104,11 +104,11 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
+# CONFIG_PACKAGE_luci-app-vssr=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=n
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=n
+# ONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=n
 # CONFIG_PACKAGE_luci-app-vsftpd=n
 CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-wolplus=n
