--- a/.github/workflows/build-openwrt-GDOCK-KKT.yml
+++ b/.github/workflows/build-openwrt-GDOCK-KKT.yml
@@ -26,7 +26,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: Config/BYGDOCK.config
   DIY_P1_SH: Scripts/GDOCK/diy-part1.sh
-  DIY_P2_SH: Scripts/GDOCK/GDOCK-KYT.sh
+  DIY_P2_SH: Scripts/GDOCK/GDOCK-KKT.sh
   CACHE_TOOLCHAIN: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
